5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1764_1580.log
== TEST (2019-05-30 00:22:33) 
-- CODE:
x = array(evall(input()))
y = array(input())
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = array(evall(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:22:43) 
-- CODE:
from numpy import *
x = array(evall(input()))
y = array(input())
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:22:49) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(input())
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:23:00) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = eval(input())
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:23:29) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:23:54) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))
print(y[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:14:20) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	elif max(x) == x[i]:
		d = y[i]
	i += 1
print(round(d,2))

-- ERROR:
File "XXXX", line 24
    elif max(x) == x[i]:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:14:41) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	i += 1
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:14:46) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:15:45) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
print(a)
print(b)
print(c)
print(e)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:15:49) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
print(a)
print(b)
print(c)
print(e)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:16:00) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = (((sum(x))/size(x)),2)

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
print(a)
print(b)
print(c)
print(e)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:16:30) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = ((sum(x))/size(x))

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
print(a)
print(b)
print(c)
print(e)
print(round(d,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:23:04) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
m = zeros(x-a)
e = sum(m)/size(m)

print(a)
print(b)
print(c)
print(d)
print(round(e,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:23:56) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
e = sum(m)/size(m)

print(a)
print(b)
print(c)
print(d)
print(round(e,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:25:10) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = 0

while size(x) > h:
	if x[i] == -1:
		a += 1

u = size(x) - a
m = zeros(u)
e = sum(m)/size(m)
print(u)
print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:25:31) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0

i = 0
h = 0

e = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
		h += 1

u = size(x) - a
m = zeros(u)
e = sum(m)/size(m)
print(u)
print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:31:06) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0


while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == x[i]:
		d = y[i]
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(round(e,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:33:23) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0
l = max(x)
d = y[l]

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:34:21) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:34:25) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:34:47) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(u)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:35:07) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:43:19) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(max(x))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:45:18) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:45:43) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) >= h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:46:05) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0

while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	i += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(e)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:49:33) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0



while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[f] = x[f]
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(m[f])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:50:24) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0

i = 0
h = 0



while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[l] = x[f]
	l += 1
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(m[l])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:50:40) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0
l = 0

i = 0
h = 0



while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
	
u = size(x) - a
m = zeros(u)
while size(u) > f:
	if x[f] > -1:
		m[l] = x[f]
	l += 1
	f += 1
e = sum(m)/size(m)
print(a)
print(b)
print(c)
print(d)
print(m[l])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:51:31) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0
l = 0

i = 0
h = 0



while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 07:51:58) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))


a = 0
b = 0
c = 0
d = 0
e = 0
f = 0
l = 0

i = 0
h = 0



while size(x) > h:
	if x[i] == -1:
		a += 1
	elif x[i] >= 6:
		b += 1
	elif x[i] < 6:
		c += 1
	elif max(x) == i:
		d = y[i]
	h += 1
print(a)
print(b)
print(c)
print(d)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:08:08) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))

a = 0
b = 0
c = 0
d = 0
e = 0

i = 0
h = 0

while size(x) != h:
	if x[i] == -1:
		a += 1
	if -1 < x[i] <=10:
		b += notas[h]
		c += 1
	if 6 <= x[i] <=10:
		d += 1
	if 0 <= x[i] < 6:
		e += 1
	if x[h] == max(x):
		f = y[h]
	h += 1
	i += 1
	
t = b/c
print(a)
print(d)
print(e)
print(round(t,2))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:08:43) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))

a = 0
b = 0
c = 0
d = 0
e = 0

i = 0
h = 0

while size(x) != h:
	if x[i] == -1:
		a += 1
	if -1 < x[i] <=10:
		b += x[h]
		c += 1
	if 6 <= x[i] <=10:
		d += 1
	if 0 <= x[i] < 6:
		e += 1
	if x[h] == max(x):
		f = y[h]
	h += 1
	i += 1
	
t = b/c
print(a)
print(d)
print(e)
print(round(t,2))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:08:57) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))

a = 0
b = 0
c = 0
d = 0
e = 0

i = 0
h = 0

while size(x) != h:
	if x[i] == -1:
		a += 1
	if -1 < x[i] <=10:
		b += x[h]
		c += 1
	if 6 <= x[i] <=10:
		d += 1
	if 0 <= x[i] < 6:
		e += 1
	if x[h] == max(x):
		f = y[h]
	h += 1
	i += 1
	
t = b/c
print(a)
print(d)
print(e)
print(round(t,2))
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:09:08) 
-- CODE:
from numpy import *
x = array(eval(input()))
y = array(eval(input()))

a = 0
b = 0
c = 0
d = 0
e = 0

i = 0
h = 0

while size(x) != h:
	if x[i] == -1:
		a += 1
	if -1 < x[i] <=10:
		b += x[h]
		c += 1
	if 6 <= x[i] <=10:
		d += 1
	if 0 <= x[i] < 6:
		e += 1
	if x[h] == max(x):
		f = y[h]
	h += 1
	i += 1
	
t = b/c
print(a)
print(d)
print(e)
print(round(t,2))
print(f)
-- EXECUTION TIME:
0.493785
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
